--- a/BPROF_HQ8HSE_MVC/BPROF_HQ8HSE_MVC/Rent.WebApp/Views/Home/ModifyRental.cshtml
+++ b/BPROF_HQ8HSE_MVC/BPROF_HQ8HSE_MVC/Rent.WebApp/Views/Home/ModifyRental.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Rent.Data
-@model Rental
+@model Rent.WebApp.Controllers.DataHelper
 
 @{
     Layout = null;
@@ -14,6 +14,42 @@
     <h1>Modify</h1>
     <a href="/Home/Index">Home</a>
     <br />
-    <p>@Model.AllData</p>
+    <form action="/Home/ModifyRental" method="post">
+        <label for="PersonRef">Choose a person:</label>
+        <select id="PersonRef" name="PersonRef">
+            @foreach (var item in Model.p)
+            {
+                @if (@Model.r.Person.Id == item.Id)
+                {
+                    <option selected="@item.Id">@item.Name</option>
+                }
+                else 
+                {
+                    <option value="@item.Id">@item.Name</option>
+                }
+            }
+        </select>
+        <br />
+        <label for="GameRef">Choose a game:</label>
+        <select id="GameRef" name="GameRef">
+            @foreach (var item in Model.g)
+            {
+                @if (@Model.r.Game.Id == item.Id)
+                {
+                    <option selected="@item.Id">@item.Name</option>
+                }
+                else
+                {
+                    <option value="@item.Id">@item.Name</option>
+                }
+            }
+        </select> <br />
+        Rent date: <br />
+        <input type="datetime" name="RentDate" value="@Model.r.RentDate"/><br />
+        Return date: <br />
+        <input type="datetime" name="ReturnDate" value="@Model.r.ReturnDate"/><br />
+        <input type="hidden" name="Id" value="@Model.r.Id" />
+        <input type="submit" value="Save Changes" />
+    </form>
 </body>
 </html>
