--- a/BPROF_HQ8HSE_MVC/BPROF_HQ8HSE_MVC/Rent.WebApp/Views/Home/ModifyPerson.cshtml
+++ b/BPROF_HQ8HSE_MVC/BPROF_HQ8HSE_MVC/Rent.WebApp/Views/Home/ModifyPerson.cshtml
@@ -14,6 +14,14 @@
     <h1>Modify</h1>
     <a href="/Home/Index">Home</a>
     <br />
-    <p>@Model.AllData</p>
+    <form action="/Home/ModifyPerson" method="post">
+        <br />
+        Name: <br />
+        <input type="text" name="Name" value="@Model.Name"/><br />
+        Birth date: <br />
+        <input type="datetime" name="BirthDate" value="@Model.BirthDate"/><br />
+        <input type="hidden" name="Id" value="@Model.Id" />
+        <input type="submit" value="Save Changes" />
+    </form>
 </body>
 </html>
