--- a/BPROF_HQ8HSE_MVC/BPROF_HQ8HSE_MVC/Rent.WebApp/Views/Home/Index.cshtml
+++ b/BPROF_HQ8HSE_MVC/BPROF_HQ8HSE_MVC/Rent.WebApp/Views/Home/Index.cshtml
@@ -2,8 +2,6 @@
 
 
     <h1>Home</h1>
-    <a href="/Home/GetRentals">Rentals</a>
-    <br />
-    <a href="/Home/GetPeople">Renters</a>
-    <br />
-    <a href="/Home/GetGames">Games</a>
+    <a class="btn btn-outline-primary" href="/Home/GetRentals">Rentals</a>
+    <a class="btn btn-outline-primary" href="/Home/GetPeople">Renters</a>
+    <a class="btn btn-outline-primary" href="/Home/GetGames">Games</a>
