--- a/BPROF_HQ8HSE_MVC/BPROF_HQ8HSE_MVC/Rent.WebApp/Views/Home/ModifyGame.cshtml
+++ b/BPROF_HQ8HSE_MVC/BPROF_HQ8HSE_MVC/Rent.WebApp/Views/Home/ModifyGame.cshtml
@@ -2,19 +2,26 @@
 @model VideoGame
 
 
-    <h1>Modify</h1>
-    <a href="/Home/Index">Home</a>
+<h1>Modify</h1>
+<a class="btn btn-outline-primary" href="/Home/Index">Home</a>
+<br />
+<form action="/Home/ModifyGame" method="post">
     <br />
-    <form action="/Home/ModifyGame" method="post">
-        <br />
-        Name: <br />
-        <input type="text" name="Name" value="@Model.Name"/><br />
-        Release date: <br />
-        <input type="datetime" name="ReleaseDate" value="@Model.ReleaseDate"/><br />
-        Publisher: <br />
-        <input type="text" name="Publisher" value="@Model.Publisher"/><br />
-        Rating: <br />
-        <input type="number" name="Rating" value="@Model.Rating"/><br />
-        <input type="hidden" name="Id" value="@Model.Id" />
-        <input type="submit" value="Save Changes" />
-    </form>
+    <div class="form-floating mb-3">
+        <input class="form-control" type="text" name="Name" value="@Model.Name" /><br />
+        <label for="floatingInput">Game Name</label>
+    </div>
+    
+    Release date: <br />
+    <input type="datetime" name="ReleaseDate" value="@Model.ReleaseDate" /><br /><br />
+    <div class="form-floating mb-3">
+        <input class="form-control" type="text" name="Publisher" value="@Model.Publisher" /><br />
+        <label for="floatingInput">Publisher</label>
+    </div>
+    <div class="form-floating mb-3">
+        <input class="form-control" type="number" name="Rating" value="@Model.Rating" /><br />
+        <label for="floatingInput">Rating</label>
+    </div>
+    <input type="hidden" name="Id" value="@Model.Id" />
+    <input class="btn btn-outline-primary" type="submit" value="Save Changes" />
+</form>
