--- a/BPROF_HQ8HSE_MVC/BPROF_HQ8HSE_MVC/Rent.WebApp/Views/Home/NewPerson.cshtml
+++ b/BPROF_HQ8HSE_MVC/BPROF_HQ8HSE_MVC/Rent.WebApp/Views/Home/NewPerson.cshtml
@@ -1,13 +1,15 @@
 ﻿@using Rent.Data
 
     <h1>New Person</h1>
-    <a href="/Home/Index">Home</a>
+    <a class="btn btn-outline-primary" href="/Home/Index">Home</a>
     <br />
     <form action="/Home/NewPerson" method="post">
         <br />
-        Name: <br />
-        <input type="text" name="Name" /><br />
+        <div class="form-floating mb-3">
+            <input class="form-control" type="text" name="Name" />
+            <label for="floatingInput">Name</label>
+        </div>
         Birth date: <br />
-        <input type="datetime" name="BirthDate" /><br />
-        <input type="submit" value="Create" />
+        <input type="datetime" name="BirthDate" /><br /><br />
+        <input class="btn btn-outline-primary" type="submit" value="Create" />
     </form>
