non CRUD methods added to ASP layer

--- a/BPROF_HQ8HSE_MVC/BPROF_HQ8HSE_MVC/Rent.WebApp/Views/Home/Index.cshtml
+++ b/BPROF_HQ8HSE_MVC/BPROF_HQ8HSE_MVC/Rent.WebApp/Views/Home/Index.cshtml
@@ -5,3 +5,4 @@
     <a class="btn btn-outline-primary" href="/Home/GetRentals">Rentals</a>
     <a class="btn btn-outline-primary" href="/Home/GetPeople">Renters</a>
     <a class="btn btn-outline-primary" href="/Home/GetGames">Games</a>
+    <a class="btn btn-outline-primary" href="/Home/GetQueries">Queries</a>
