--- a/BPROF_HQ8HSE_MVC/BPROF_HQ8HSE_MVC/Rent.WebApp/Views/Home/ModifyRental.cshtml
+++ b/BPROF_HQ8HSE_MVC/BPROF_HQ8HSE_MVC/Rent.WebApp/Views/Home/ModifyRental.cshtml
@@ -11,7 +11,7 @@
             {
                 @if (@Model.r.Person.Id == item.Id)
                 {
-                    <option selected="@item.Id">@item.Name</option>
+                    <option value="@item.Id" selected="@item.Id">@item.Name</option>
                 }
                 else
                 {
@@ -25,7 +25,7 @@
             {
                 @if (@Model.r.Game.Id == item.Id)
                 {
-                    <option selected="@item.Id">@item.Name</option>
+                    <option value="@item.Id" selected="@item.Id">@item.Name</option>
                 }
                 else
                 {
